[gd_scene load_steps=7 format=3 uid="uid://8812csi01swp"]

[ext_resource type="Script" uid="uid://d0ju32bw8bdpl" path="res://Scenes/gameobjects/pressure_game.gd" id="1_fj55i"]
[ext_resource type="PackedScene" uid="uid://buxhxx2wjc23x" path="res://Scenes/gameobjects/PressureGauge.tscn" id="2_dp1od"]
[ext_resource type="Script" uid="uid://csjccrhj5wnx7" path="res://addons/phantom_camera/scripts/phantom_camera/phantom_camera_3d.gd" id="3_4mns8"]
[ext_resource type="Script" uid="uid://8umksf8e80fw" path="res://addons/phantom_camera/scripts/resources/tween_resource.gd" id="4_uskdg"]

[sub_resource type="Resource" id="Resource_c13w8"]
script = ExtResource("4_uskdg")

[sub_resource type="BoxShape3D" id="BoxShape3D_tbbwt"]
size = Vector3(2.2216797, 2.109314, 0.9623718)

[node name="PressureGame" type="Area3D"]
transform = Transform3D(0.37, 0, 0, 0, 0.37, 0, 0, 0, 0.37, 0, 0, 0)
script = ExtResource("1_fj55i")

[node name="Pressure_Gauge" parent="." instance=ExtResource("2_dp1od")]

[node name="Pressure_Needle" parent="Pressure_Gauge" index="1"]
transform = Transform3D(-0.50847083, -0.8610795, 0, 0.86108, -0.5084705, 0, 0, 0, 1.0000005, 0, 0, 0)

[node name="PhantomCamera3D" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 2.9540415)
script = ExtResource("3_4mns8")
tween_resource = SubResource("Resource_c13w8")
metadata/_custom_type_script = "uid://csjccrhj5wnx7"

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.020019531, 0.0047912598, 0.009963989)
shape = SubResource("BoxShape3D_tbbwt")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1.8146455)

[node name="CDTimer" type="Timer" parent="."]
autostart = true

[connection signal="timeout" from="CDTimer" to="." method="_on_cd_timer_timeout"]

[editable path="Pressure_Gauge"]
